Fixing a couple of mistakes: All Categories link in sidebar, some spacing

--- a/app/assets/stylesheets/listings.css.scss
+++ b/app/assets/stylesheets/listings.css.scss
@@ -4,6 +4,7 @@
 #listings {
   &.show {
     .images { width: 200px; }
+    .details {margin-bottom: 1em; }
     .bx-wrapper { margin: 0 auto; }
     .slider {
       text-align: center;
